--- a/JS-Assignment-9 -Calculaotor/style.css
+++ b/JS-Assignment-9 -Calculaotor/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    background: linear-gradient(45deg, rgb(66, 135, 245) ,darkcyan);
+    /* background-color: (#f0f0f0); */
+}
+
 .calculator {
     display: flex;
     flex-direction: column;
@@ -19,11 +24,11 @@
 }
 
 .calculator-lentgh {
-    height: 360px;
+    height: 400px;
     width: 250px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly   ;
     align-items: center;
 }
 
@@ -71,4 +76,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.bg-blue{
+    background-color: rgb(66, 135, 245);
 }
